# NFHTTP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.circleci/: config.yml
buildconf/: bridge.json
ci/: Brewfile  README.md  android.py  androidlinux.py  build_options.py  ci.yaml  ios.py  linux.py  linux.sh  linuxschroot.sh  llvm-run.sh  nfbuild.py  nfbuildlinux.py  nfbuildosx.py  nfbuildwindows.py  osx.py  osx.sh  requirements.txt  windows.ps1  windows.py
include/NFHTTP/: Client.h  NFHTTP.h  Request.h  RequestToken.h  Response.h  ResponseImplementation.h
libraries/: CMakeLists.txt  config_openssl.sh  curl.patch
libraries/sqlite/: shell.c
resources/: hello-requests.json  world-responses.json
source/: CMakeLists.txt  CacheLocationApple.mm  CacheLocationLinux.cpp  CacheLocationWindows.cpp  CachingClient.cpp  CachingClient.h  CachingDatabase.cpp  CachingDatabase.h  CachingDatabaseDelegate.h  CachingSQLiteDatabase.cpp  CachingSQLiteDatabase.h  Client.cpp  ClientCpprestsdk.cpp  ClientCpprestsdk.h  ClientCurl.cpp  ClientCurl.h  ClientModifierImplementation.cpp  ClientModifierImplementation.h  ClientMultiRequestImplementation.cpp  ClientMultiRequestImplementation.h  ClientNSURLSession.h  ClientNSURLSession.mm  NFHTTP.cpp  NFHTTPCLI.cpp  Request.cpp  RequestImplementation.cpp  RequestImplementation.h  RequestTokenDelegate.h  RequestTokenImplementation.cpp  RequestTokenImplementation.h  ResponseImplementation.cpp  sha256.cpp  sha256.h
tools/: boost.vulcan  clang-format.vulcan  curl.vulcan  generate-version.py  make.vulcan  openssl.vulcan  virtualenv.vulcan
tools/buildtools/: .gitignore  bteamcity.py  build.py  check_output.py  dev_requirements.txt  options.py  options_test.py  xcode.py
tools/buildtools/build_time_recorder/: .gitignore  README.md  build_time_recorder.py  setup.py
tools/buildtools/build_time_recorder/test/: example_with_duration.json  example_without_duration.json  example_without_identifier.json  test_build_time_recorder.py
tools/buildtools/buildconf/: bridge.json
tools/buildtools/ci/: ci.py
tools/buildtools/junit_decorator/: README.md  allowed.py  decorator.py  requirements.txt  setup.py  validator.py
tools/buildtools/junit_decorator/samples/: feature-jira-feature-mapping.xml  feature-squad-map.json  feature-squad-mapping.xml  junit.xml  junit_for_xmls.xml  testsuite-feature-map.json  testsuite-feature-mapping.xml
tools/buildtools/junit_decorator/tests/: decorator_test.py  map_test.py
tools/buildtools/junit_decorator/xsd/: feature-squad-mapping.xsd  testsuite-feature-mapping.xsd
tools/buildtools/ownership/: README.md  ghe.py  git_diff.py  mention_bot.py  ownership.py  service_info.py  setup.py  system_z.py  test_file_validator.py  util.py
tools/buildtools/ownership/test/: test_ghe.py  test_git_diff.py  test_mention_bot.py  test_ownership.py  test_service_info.py  test_system_z.py  test_test_file_validator.py
tools/buildtools/ownership/test/fixtures/: filelist.txt
tools/buildtools/ownership/test/fixtures/cassettes/: system_z_valid.yml
tools/buildtools/ownership/test/fixtures/ghe/: gitconfig_list
tools/buildtools/ownership/test/fixtures/mb/: mention-bot-with-blacklist.json  mention-bot-with-existing-data.json
tools/buildtools/ownership/test/fixtures/service_info/: valid_service_info_1.yaml
tools/buildtools/ownership/test/fixtures/service_info/invalid/: invalid_diff_cover.yaml  invalid_service_info_1.yaml  invalid_service_info_2.yaml  invalid_service_info_3.yaml
tools/buildtools/ownership/test/fixtures/service_info/test_directory/: service-infos.json
tools/buildtools/ownership/test/fixtures/service_info/valid/: valid_service_info_2.yaml  valid_service_info_2_with_multiple_paths.yaml  valid_service_info_with_diff_cover.yaml  valid_service_info_without_facts.yaml  valid_service_info_without_mention_bot.yaml
tools/buildtools/ownership/test/fixtures/service_info/valid/files_for_diffcover/: dummy_file.py
tools/buildtools/ownership/test/fixtures/test_file_validator/valid/src/com/spotify/package1/: service-info.yaml
tools/buildtools/ownership/test/fixtures/test_file_validator/valid/test/: FakeTest.java  FakeTestWithFeature.java
tools/buildtools/purgatory/: purgatory_validate.py
tools/buildtools/purgatory/test/: test_purgatory_validate.py
tools/buildtools/scripts/: package_cmake.sh
tools/buildtools/spotify_buildtools/: cmake.py  cmdparser.py  cpplint.py  preset.py  run.py  schroot.py  utils.py
tools/buildtools/spotify_buildtools/software/: android_ndk.py  android_ndk.vulcan  apt.py  ccache.py  ccache.vulcan  checker.py  checker.vulcan  clang.py  clang.vulcan  cmake.py  cmake.vulcan  dump_syms.py  dump_syms.vulcan  ninja.py  ninja.vulcan  node.py  node.vulcan  sccache.py  sccache.vulcan  softwarebase.py  visualstudio.py  visualstudio.vulcan  xcode.py  xcode.vulcan
tools/buildtools/spotify_buildtools/software/certs/: gcs-warden-client.crt  gcs-warden-client.key  gcs-warden-server.crt
tools/vulcan/: .gitignore  .gitmodules  README  setup.py  test.sh
tools/vulcan/buildconf/: bridge.conf
tools/vulcan/doc/: dsl.asciidoc  index.asciidoc
tools/vulcan/lib/requests/: README.spotify
tools/vulcan/lib/requests/debian/: changelog  clean  control  copyright  rules
tools/vulcan/ruby/: dsl.rb
tools/vulcan/spotify_vulcan/: assembler_url.py  assemblers.py  cache_manager.py  dependencies.py  properties.py  utils.py
tools/vulcan/test/: assembler_url_artifactory_test.py  assembler_url_artifactory_without_info_test.py  assembler_url_external_test.py  assembler_url_test.py  assemblers_test.py  cache_manager_test.py  core652_test.py  dependencies_test.py  lookup_id_test.py  properties_test.py  test_vulcan_file.vulcan  test_vulcan_file2.vulcan
